[gd_scene load_steps=10 format=3 uid="uid://o2rht176mmgv"]

[ext_resource type="FontFile" uid="uid://c7tmixruws4h5" path="res://assets/fonr.ttf" id="1_6vm6q"]
[ext_resource type="Script" uid="uid://bjbop6b3iypuj" path="res://src/ui_components/results/lose_panel/lose_panel.gd" id="1_q8xh0"]
[ext_resource type="Script" uid="uid://1agcxa80uqew" path="res://src/util/shaker.gd" id="2_4jw04"]
[ext_resource type="Texture2D" uid="uid://ddceljcpm4y81" path="res://assets/ui/buttons/active_btn.png" id="3_q8xh0"]
[ext_resource type="Texture2D" uid="uid://bjmy5f4rxl8fv" path="res://assets/ui/buttons/button_default.png" id="4_gadmd"]
[ext_resource type="Texture2D" uid="uid://b7k6sktmveh83" path="res://assets/ui/buttons/hover_btn.png" id="5_qaie5"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_003k4"]
texture = ExtResource("3_q8xh0")
texture_margin_left = 10.0
texture_margin_top = 10.0
texture_margin_right = 10.0
texture_margin_bottom = 10.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_d43n2"]
texture = ExtResource("4_gadmd")
texture_margin_left = 10.0
texture_margin_top = 10.0
texture_margin_right = 10.0
texture_margin_bottom = 10.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tqkm8"]
texture = ExtResource("5_qaie5")
texture_margin_left = 10.0
texture_margin_top = 10.0
texture_margin_right = 10.0
texture_margin_bottom = 10.0

[node name="LosePanel" type="Control"]
layout_mode = 3
anchor_right = 0.017
anchor_bottom = 0.037
offset_right = 799.36
offset_bottom = 624.04
script = ExtResource("1_q8xh0")

[node name="GameOverLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 147.0
grow_horizontal = 2
pivot_offset = Vector2(288, 88)
theme_override_colors/font_color = Color(1, 0.19215687, 0.37254903, 1)
theme_override_colors/font_outline_color = Color(0.7490196, 0, 0.2509804, 1)
theme_override_constants/outline_size = 17
theme_override_fonts/font = ExtResource("1_6vm6q")
theme_override_font_sizes/font_size = 128
text = "Game over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -176.0
offset_right = 320.0
offset_bottom = -76.0
grow_horizontal = 2
grow_vertical = 2

[node name="HintState" type="Label" parent="Level"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -32.5
offset_right = 289.0
offset_bottom = 32.5
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_6vm6q")
theme_override_font_sizes/font_size = 40
text = "Level reached"
vertical_alignment = 1

[node name="LevelReached" type="Label" parent="Level"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -198.0
offset_top = -32.5
offset_bottom = 32.5
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0.92156863, 1, 0.5019608, 1)
theme_override_colors/font_outline_color = Color(0.7490196, 0.78039217, 0, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("1_6vm6q")
theme_override_font_sizes/font_size = 56
text = "10 / 20"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Shaker" type="Node" parent="Level" node_paths=PackedStringArray("target")]
script = ExtResource("2_4jw04")
target = NodePath("..")
amount = 7.0
duration = 0.5
metadata/_custom_type_script = "uid://1agcxa80uqew"

[node name="Score" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -84.0
offset_right = 320.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2

[node name="HintState" type="Label" parent="Score"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -32.5
offset_right = 128.0
offset_bottom = 32.5
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_6vm6q")
theme_override_font_sizes/font_size = 40
text = "Score"
vertical_alignment = 1

[node name="ScoreEarned" type="Label" parent="Score"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -182.0
offset_top = -32.5
offset_bottom = 32.5
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.5686275, 0.9882353, 1)
theme_override_colors/font_outline_color = Color(0.8784314, 0, 0.88235295, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("1_6vm6q")
theme_override_font_sizes/font_size = 56
text = "1000"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Shaker" type="Node" parent="Score" node_paths=PackedStringArray("target")]
script = ExtResource("2_4jw04")
target = NodePath("..")
amount = 7.0
duration = 0.5
metadata/_custom_type_script = "uid://1agcxa80uqew"

[node name="BestResultLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -416.0
offset_top = 336.0
offset_right = 416.0
offset_bottom = 436.0
grow_horizontal = 2
pivot_offset = Vector2(288, 88)
theme_override_colors/font_color = Color(0.11372549, 0.9098039, 0.44313726, 1)
theme_override_colors/font_outline_color = Color(0.057600003, 0.48, 0.22656003, 0.76862746)
theme_override_constants/outline_size = 17
theme_override_fonts/font = ExtResource("1_6vm6q")
theme_override_font_sizes/font_size = 73
text = "New best result!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Shaker" type="Node" parent="BestResultLabel" node_paths=PackedStringArray("target")]
script = ExtResource("2_4jw04")
target = NodePath("..")
amount = 7.0
duration = 0.5
metadata/_custom_type_script = "uid://1agcxa80uqew"

[node name="ReturnButton" type="Button" parent="."]
layout_mode = 0
offset_left = 256.0
offset_top = 480.0
offset_right = 576.0
offset_bottom = 576.0
focus_mode = 0
theme_override_fonts/font = ExtResource("1_6vm6q")
theme_override_font_sizes/font_size = 44
theme_override_styles/normal = SubResource("StyleBoxTexture_003k4")
theme_override_styles/pressed = SubResource("StyleBoxTexture_d43n2")
theme_override_styles/hover = SubResource("StyleBoxTexture_tqkm8")
text = "Return"

[connection signal="mouse_entered" from="ReturnButton" to="." method="_on_return_button_mouse_entered"]
[connection signal="pressed" from="ReturnButton" to="." method="_on_return_button_pressed"]
